openbve (1.2.4.1-0ubuntu1) unreleased; urgency=low

  * New upstream stable version (1.2.4.1) (LP: #444934)

 -- Paul Sladen <ubuntu@paul.sladen.org>  Wed,  6 Jan 2010 02:55:00 +0000

openbve (1.2.2.0-0ubuntu1) unreleased; urgency=low

  * New upstream stable version (1.2.2.0) (LP: #444934)
  * changelog.html: update (1.2.2.0)
  * releasenotes.html: update (1.2.1.3)
  * Add NEWS.Debian to docs

 -- Paul Sladen <ubuntu@paul.sladen.org>  Tue,  1 Sep 2009 00:11:00 +0100

openbve (1.2.0.3-0ubuntu1) karmic; urgency=low

  * New upstream stable version (1.2.0.3)
  * debian/copyright: update to reflect minor wording changes
  * debian/rules: "./rules fetch-html" for {changelog,releasenotes}.html
  * changelog.html: update (1.2.0.3)
  * releasenotes.html: update (1.2.0.0)
  * debian/rules: DEBUG_CONFIGURATION=Release to switch codepaths used
  * debian/control: openbve-data (>= 1.2.0.3+dfsg)

 -- Paul Sladen <ubuntu@paul.sladen.org>  Thu,  6 Aug 2009 02:05:00 +0100

openbve (1.1.1.0-0ubuntu1) unreleased; urgency=low

  * New upstream development version (1.1.1.0)
  * debian/control: rev 'openbve-data' dependency (new strings)

 -- Paul Sladen <ubuntu@paul.sladen.org>  Sun, 05 Jul 2009 21:10:00 +0000

openbve (1.0.7.2-0ubuntu1) karmic; urgency=low

  * New upstream version (1.0.7.2)
  * Update changelog.html (1.0.7.2)

 -- Paul Sladen <ubuntu@paul.sladen.org>  Tue, 23 Jun 2009 20:20:00 +0000

openbve (1.0.6.7-0ubuntu1) unreleased; urgency=low

  * Add WatchdogExit() to take care of deadlocks in library shutdown
  * New upstream version (1.0.6.7)

 -- Paul Sladen <ubuntu@paul.sladen.org>  Sun,  7 Jun 2009 02:54:00 +0000

openbve (1.0.6.2-0ubuntu1) unreleased; urgency=low

  * New upstream version (1.0.6.2)
  * Update 'debian/known-issues.txt'
  * Update 'openbve-data' Depends: >= 1.0.6.0+dfsg
  * Drop try..catch around saving of logs (should be handled by
    separate patch applied by upstream.
  * Update changelog.html (1.0.6.2)
