@@ -48,6 +48,86 @@ This changelog is intended for advanced users and developers. It does <b>not</b>
 <table><tr style="height: 4px;"><td /></tr></table>
 <br /><table><tr style="height: 4px;"><td /></tr></table>
 <table><tr><td bgcolor="#808080" height="24" style="background-image:url(common/gradient_24.png)">
+<font color="#FFFFFF">&nbsp;v1.2.3.3 (2010-01-03)&nbsp;</font>
+</td></tr></table>
+<table><tr style="height: 4px;"><td /></tr></table>
+<table cellspacing="0"><tr>
+<td valign="top">●</td>
+<td>&nbsp;</td>
+<td><font color="red"><b>Performance</b></font><br />During the time the in-game loading screen is showing, time is fast-forwarded until the player train's arrival time. Up to now, animated objects of trains (panel, exterior) were always updated during this time, leading to excessive loading times for very detailed animated objects. Updating those objects is now skipped during the fast-forward stage, leading to faster loading times in those cases.</td>
+</tr></table>
+<table cellspacing="0"><tr>
+<td valign="top">●</td>
+<td>&nbsp;</td>
+<td><font color="red"><b>Bugfix</b></font><br />In some cases, the Track.Rail and Track.RailStart commands in CSV/RW routes could reset the rail type to 0 even when this was not intended.</td>
+</tr></table>
+<table cellspacing="0"><tr>
+<td valign="top">●</td>
+<td>&nbsp;</td>
+<td><font color="red"><b>Bugfix</b></font><br />In some cases, CSV/RW route errors were reported without giving the file name of the route, making debugging the error potentially harder, especially if $Include statements were used.</td>
+</tr></table>
+<br /><table><tr style="height: 4px;"><td /></tr></table>
+<table><tr><td bgcolor="#808080" height="24" style="background-image:url(common/gradient_24.png)">
+<font color="#FFFFFF">&nbsp;v1.2.3.2 (2009-12-13)&nbsp;</font>
+</td></tr></table>
+<table><tr style="height: 4px;"><td /></tr></table>
+<table cellspacing="0"><tr>
+<td valign="top">●</td>
+<td>&nbsp;</td>
+<td><font color="red"><b>Bugfix</b></font><br />There was a chance that the program could crash with a NaN in multiple places. While such a crash has not been observed yet, it's probably best to fix this anyway.</td>
+</tr></table>
+<br /><table><tr style="height: 4px;"><td /></tr></table>
+<table><tr><td bgcolor="#808080" height="24" style="background-image:url(common/gradient_24.png)">
+<font color="#FFFFFF">&nbsp;v1.2.3.1 (2009-11-29)&nbsp;</font>
+</td></tr></table>
+<table><tr style="height: 4px;"><td /></tr></table>
+<table cellspacing="0"><tr>
+<td valign="top">●</td>
+<td>&nbsp;</td>
+<td><font color="red"><b>Simulation</b></font><br />Point-based turns are now smoothened out by using short curve segments instead of discontinuous straight track pieces.</td>
+</tr></table>
+<table cellspacing="0"><tr>
+<td valign="top">●</td>
+<td>&nbsp;</td>
+<td><font color="red"><b>Miscellaneous</b></font><br />Removed the dependency on specific versions of the Tao.OpenAL, Tao.OpenGL and Tao.SDL libraries, which could cause problems in recent Linux distributions.</td>
+</tr></table>
+<table cellspacing="0"><tr>
+<td valign="top">●</td>
+<td>&nbsp;</td>
+<td><font color="red"><b>Miscellaneous</b></font><br />Due to an apparent glitch in Mono, the loading screen would not show the <em>Save Report</em> button on Mac OS X. An attempt has been made to circumvent this glitch.</td>
+</tr></table>
+<br /><table><tr style="height: 4px;"><td /></tr></table>
+<table><tr><td bgcolor="#808080" height="24" style="background-image:url(common/gradient_24.png)">
+<font color="#FFFFFF">&nbsp;v1.2.3.0 (2009-11-15)&nbsp;</font>
+</td></tr></table>
+<table><tr style="height: 4px;"><td /></tr></table>
+<table cellspacing="0"><tr>
+<td valign="top">●</td>
+<td>&nbsp;</td>
+<td><font color="red"><b>Simulation</b></font><br />Minor improvements to the AI. In particular, the AI should not get stuck in front of a stop point on upward gradients any longer.</td>
+</tr></table>
+<table cellspacing="0"><tr>
+<td valign="top">●</td>
+<td>&nbsp;</td>
+<td><font color="red"><b>Developing routes</b></font><br />The $Include command has been added which allows to include other files, optionally one of a set of files with a certain probability.</td>
+</tr></table>
+<table cellspacing="0"><tr>
+<td valign="top">●</td>
+<td>&nbsp;</td>
+<td><font color="red"><b>Developing routes</b></font><br />Added the Train.Velocity command in CSV/RW routes. The command defines the upper speed limit the AI-controlled trains may travel at.</td>
+</tr></table>
+<table cellspacing="0"><tr>
+<td valign="top">●</td>
+<td>&nbsp;</td>
+<td><font color="red"><b>Miscellaneous</b></font><br />Comments in RW routes now span the whole line instead of up to the beginning of the next command.</td>
+</tr></table>
+<table cellspacing="0"><tr>
+<td valign="top">●</td>
+<td>&nbsp;</td>
+<td><font color="red"><b>Miscellaneous</b></font><br />Due to an apparent glitch in Mono, the loading screen would not show the <em>Ignore</em> button on Mac OS X. An attempt has been made to circumvent this glitch.</td>
+</tr></table>
+<br /><table><tr style="height: 4px;"><td /></tr></table>
+<table><tr><td bgcolor="#808080" height="24" style="background-image:url(common/gradient_24.png)">
 <font color="#FFFFFF">&nbsp;v1.2.2.0 (2009-09-20)&nbsp;</font>
 </td></tr></table>
 <table><tr style="height: 4px;"><td /></tr></table>
@@ -74,7 +154,7 @@ This changelog is intended for advanced users and developers. It does <b>not</b>
 <table cellspacing="0"><tr>
 <td valign="top">●</td>
 <td>&nbsp;</td>
-<td><font color="red"><b>Bugfix</b></font><br />The <em>delta</em> variable returned incorrect results in animated objects whenever RefreshRate was set to a non-zero value.</td>
+<td><font color="red"><b>Bugfix</b></font><br />The <em>delta</em> variable returned incorrect results in animated objects whenever <em>RefreshRate</em> was set to a non-zero value.</td>
 </tr></table>
 <table cellspacing="0"><tr>
 <td valign="top">●</td>
@@ -105,7 +185,7 @@ This changelog is intended for advanced users and developers. It does <b>not</b>
 <td valign="top">●</td>
 <td>&nbsp;</td>
 <td><font color="red"><b>Simulation</b></font><br />For trains which do not have exterior objects for their cars, a default object is now shown. In contrast to previous versions, this feature is now not only the default behavior, but also, it cannot be deactivated through conventional means. <br />
- <b>Rationale:</b> Many users wonder why signalling works the way it does, or wonder why they suddenly derail en-route. Often, this is due to the presence of a preceding train which does not come with exterior objects. The exterior view of an own invisible train is confusing for some as well.</td>
+ <b>Rationale:</b> Many users wonder why signalling works the way it does, or wonder why they suddenly derail en-route. Often, this is due to the presence of a preceding train which does not come with exterior objects. Further, the own train is not invisible this way, either.</td>
 </tr></table>
 <table cellspacing="0"><tr>
 <td valign="top">●</td>
@@ -151,7 +231,7 @@ This changelog is intended for advanced users and developers. It does <b>not</b>
 <table cellspacing="0"><tr>
 <td valign="top">●</td>
 <td>&nbsp;</td>
-<td><font color="red"><b>Bugfix</b></font><br />The A.I. could crash the game with an <em>The index is outside of the bounds of the array</em> error whenever it encountered a station without defined station stops.</td>
+<td><font color="red"><b>Bugfix</b></font><br />The AI could crash the game with an <em>The index is outside of the bounds of the array</em> error whenever it encountered a station without defined station stops.</td>
 </tr></table>
 <table cellspacing="0"><tr>
 <td valign="top">●</td>
@@ -242,7 +322,7 @@ This changelog is intended for advanced users and developers. It does <b>not</b>
 <table cellspacing="0"><tr>
 <td valign="top">●</td>
 <td>&nbsp;</td>
-<td><font color="red"><b>Simulation</b></font><br />The A.I. now waits at the stopping point of a station if there is a red signal about 150m ahead.</td>
+<td><font color="red"><b>Simulation</b></font><br />The AI now waits at the stopping point of a station if there is a red signal about 150m ahead.</td>
 </tr></table>
 <table cellspacing="0"><tr>
 <td valign="top">●</td>
@@ -508,7 +588,7 @@ This changelog is intended for advanced users and developers. It does <b>not</b>
 <table cellspacing="0"><tr>
 <td valign="top">●</td>
 <td>&nbsp;</td>
-<td><font color="red"><b>Simulation</b></font><br />The A.I. now takes a bit less time trying to stop accurately at stations.</td>
+<td><font color="red"><b>Simulation</b></font><br />The AI now takes a bit less time trying to stop accurately at stations.</td>
 </tr></table>
 <table cellspacing="0"><tr>
 <td valign="top">●</td>
@@ -558,7 +638,7 @@ This changelog is intended for advanced users and developers. It does <b>not</b>
 <table cellspacing="0"><tr>
 <td valign="top">●</td>
 <td>&nbsp;</td>
-<td><font color="red"><b>Simulation</b></font><br />The A.I. has been fine-tuned. It makes use of cruising, holding speed by selecting a suitable power notch, and can react to wheel slip by restricting use of certain power notches.</td>
+<td><font color="red"><b>Simulation</b></font><br />The AI has been fine-tuned. It makes use of cruising, holding speed by selecting a suitable power notch, and can react to wheel slip by restricting use of certain power notches.</td>
 </tr></table>
 <table cellspacing="0"><tr>
 <td valign="top">●</td>
@@ -784,7 +864,7 @@ This changelog is intended for advanced users and developers. It does <b>not</b>
 <table cellspacing="0"><tr>
 <td valign="top">●</td>
 <td>&nbsp;</td>
-<td>The A.I. now drives at 80%-100% of the route speed, depending on a random initial choice. This adds some slight variation to the preceding train.</td>
+<td>The AI now drives at 80%-100% of the route speed, depending on a random initial choice. This adds some slight variation to the preceding train.</td>
 </tr></table>
 <br /><table><tr style="height: 4px;"><td /></tr></table>
 <table><tr><td bgcolor="#808080" height="24" style="background-image:url(common/gradient_24.png)">
